Tweaking Provisioning / Deploy Scripts!!!!