@@ -96,12 +96,14 @@
   :prep-tasks ["scalac" "javac" ["cljsbuild" "once"]]
   :ring {:handler com.outcastgeek.services.web.Services/website}
   :aot :all
+  :disable-implicit-clean true
 ;  :jvm-opts ["-Xmx1g" "-server"
 ;             "-Dhttp.proxyHost=webproxy.int.westgroup.com"
 ;             "-Dhttp.proxyPort=80"
 ;             "-Dhttps.proxyHost=webproxy.int.westgroup.com"
 ;             "-Dhttps.proxyPort=80"]
   :jvm-opts ["-Xmx512M" "-server" "-Xms512m" "-XX:MaxPermSize=128m"
+;  :jvm-opts ["-Xmx1G" "-server" "-Xms1G" "-XX:MaxPermSize=128m"
              "-XX:CompileThreshold=4" "-XX:+AggressiveOpts"
              "-XX:MaxHeapFreeRatio=70" "-XX:MinHeapFreeRatio=40"
              "-XX:+UseParallelGC" "-XX:ParallelGCThreads=24"
